Fix header z-index.

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,7 +5,7 @@
   padding: 15px;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 100;
   background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0));
   transition: all 0.5s;
 }
